<resources>
    <string name="app_name">FragmentsLab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="red_fragment_button">Red</string>
    <string name="green_fragment_button">Green</string>
    <string name="blue_fragment_button">Blue</string>
    <string name="purple_fragment_button">UW Purple</string>
    <string name="gold_fragment_button">UW Gold</string>
    <string name="color_key">key</string>
</resources>
